src/objects/Payment_Plan_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <label>Payment Plan</label>
        <referenceTo>Payment_Plan__c</referenceTo>
        <relationshipLabel>Payment Plan Line Items</relationshipLabel>
        <relationshipName>Payment_Plan_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Payment Plan Line Item</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Payment Plan Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plan Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>